--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="file:///Users/admin/Desktop/verifi/css/styles.css">
 </head>
-<img height="270px" width="500px" align="left" margin="50px right" src="file:///Users/admin/Desktop/verifi/images/forum.jpeg"/><br/><br/>
+<img height="270px" width="500px" align="left" margin="50px right" src="https://github.com/kiaforumtickets/harry-styles/blob/main/images/forum.jpeg?raw=true"/><br/><br/>
 
 <body>
   <img class="event-image"  src="file:///Users/admin/Desktop/verifi/images/staticImage.svg"/><br/><br/><br/><br/><br/><br/>
