--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="file:///Users/admin/Desktop/verifi/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <img height="270px" width="500px" align="left" margin="50px right" src="https://github.com/kiaforumtickets/harry-styles/blob/main/images/forum.jpeg?raw=true"/><br/><br/>
 
