--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <img height="270px" width="500px" align="left" margin="50px right" src="https://github.com/kiaforumtickets/harry-styles/blob/main/images/forum.jpeg?raw=true"/><br/><br/>
 
 <body>
-  <img class="event-imge"  height="270px" width="500px" src="https://raw.githubusercontent.com/kiaforumtickets/harry-styles/0eada1999d1f20d0d6a11ed18c0a6da6c0a4f95d/images/staticImage.svg"/><br/><br/><br/><br/><br/><br/>
+  <img class="event-image" src="images/staticImage.svg"/><br/><br/><br/><br/><br/><br/>
   <span class="event-title">Harry Styles</span>
   <div class="event-info">
     <table class="event-info-table">
