--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<img height="270px" width="500px" align="left" margin="50px right" src="https://github.com/kiaforumtickets/harry-styles/blob/main/images/forum.jpeg?raw=true"/><br/><br/>
+<img height="270px" width="500px" align="left" src="images/forum.jpeg"/><br/><br/>
 
 <body>
-  <img class="event-image" src="images/staticImage.svg"/><br/><br/><br/><br/><br/><br/>
+  <img class="event-image" align="right" src="images/staticImage.svg"/><br/><br/><br/><br/><br/><br/>
   <span class="event-title">Harry Styles</span>
   <div class="event-info">
     <table class="event-info-table">
