--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HARRY STYLES KIA FORUM 2023</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -12,7 +12,7 @@
 <img height="270px" width="500px" align="left" src="images/forum.jpeg"/><br/><br/>
 
 <body>
-  <img class="event-image" align="right" src="images/staticImage.svg"/><br/><br/><br/><br/><br/><br/>
+  <img class="event-image" src="images/staticImage.svg"/><br/><br/><br/><br/><br/><br/>
   <span class="event-title">Harry Styles</span>
   <div class="event-info">
     <table class="event-info-table">
