--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <img height="270px" width="100%" align="left" src="images/forum.jpeg"/><br/><br/>
+  <img height="270px" width="100%" align="lt" src="images/forum.jpeg"/><br/><br/>
   <img class="event-image" width="100%" src="images/staticImage.svg"/><br/><br/><br/><br/><br/><br/>
   <span class="event-title">Harry Styles</span>
   <div class="event-info">
